crates/hird-parse/tests/snapshots/smoke__actor_handler_return_type_rejected.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"actor A { handle Msg(x), st -> Next<St> ! {Log} = f(x, st) }\")"
---
SOURCE_FILE
  ACTOR_DECL
    ACTOR_KW "actor"
    WHITESPACE " "
    IDENT "A"
    WHITESPACE " "
    L_BRACE "{"
    ACTOR_HANDLER
      WHITESPACE " "
      HANDLE_KW "handle"
      CONSTRUCTOR_PAT
        WHITESPACE " "
        IDENT "Msg"
        L_PAREN "("
        BIND_PAT
          IDENT "x"
        R_PAREN ")"
      COMMA ","
      BIND_PAT
        WHITESPACE " "
        IDENT "st"
      RETURN_TYPE
        WHITESPACE " "
        ARROW "->"
        APP_TYPE
          WHITESPACE " "
          IDENT "Next"
          TYPE_ARGS
            LT "<"
            IDENT "St"
            GT ">"
      EFFECT_ANN
        WHITESPACE " "
        BANG "!"
        WHITESPACE " "
        L_BRACE "{"
        IDENT "Log"
        R_BRACE "}"
      WHITESPACE " "
      EQ "="
      APP_EXPR
        WHITESPACE " "
        IDENT "f"
        TUPLE_LIT
          L_PAREN "("
          IDENT "x"
          COMMA ","
          WHITESPACE " "
          IDENT "st"
          R_PAREN ")"
    WHITESPACE " "
    R_BRACE "}"
---
P0006 28..30: a handler has no return type
