crates/hird-parse/tests/snapshots/smoke__clock_expr.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn go() = clock()\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "go"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    CLOCK_EXPR
      WHITESPACE " "
      IDENT "clock"
      L_PAREN "("
      R_PAREN ")"
